# appendfs

./: Cargo.toml  README.md
examples/: reader.rs  writer.rs
src/: block.rs  error.rs  fs.rs  lib.rs  logging.rs  storage.rs  utils.rs
src/storage/: file.rs  mod.rs  ram.rs
