[package]
name = "appendfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.1"
env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.19", optional = true }

[features]
default_features = []
file_storage = []
logging = ["dep:log", "dep:env_logger"]

# for example app
[dev-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"

[lib]
name = "appendfs"
path = "src/lib.rs"

[[example]]
# run with 'cargo run --example reader -- --device /dev/sda'
name = "reader"

[[example]]
name = "writer"